# DDP-based-dowm-sampling

./: README.md  pyproject.toml  requirements.txt
config/: pipeline_params.csv
scripts/: downsample_dataset.py
src/ddp_downsampling/: __init__.py  cli_downsample.py  config.py  ddp_metrics.py  downsampling.py  segmentation.py
tests/: conftest.py  test_downsampling_index_sets.py  test_segmentation.py
