[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ddp-downsampling"
version = "0.1.0"
description = "DDP-guided adaptive downsampling for battery time-series data."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "pandas>=2.0",
]

[project.scripts]
ddp-downsample = "ddp_downsampling.cli_downsample:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
